Fri Apr 26 00:07:52 2013  Hiroshi Shirosaki  <h.shirosaki@gmail.com>

	* lib/rinda/ring.rb (Rinda::RingServer#initialize): accept array
	  arguments of address to specify multicast interface.

	* lib/rinda/ring.rb (Rinda::RingServer#make_socket): add optional
	  arguments for multicast interface.

	* test/rinda/test_rinda.rb
	  (TestRingFinger#test_ring_server_ipv4_multicast,
	   TestRingFinger#test_ring_server_ipv6_multicast): add tests for
	  above change.

	* test/rinda/test_rinda.rb
	  (TestRingServer#test_make_socket_ipv4_multicast,
	   TestRingServer#test_make_socket_ipv6_multicast): change bound
	  interface address because multicast address is not allowed on Linux
	  or Windows.
	  [ruby-core:53692] [Bug #8159]

Thu Apr 25 23:45:02 2013  Hiroshi Shirosaki  <h.shirosaki@gmail.com>

	* lib/rinda/ring.rb (Rinda::RingServer#initialize): add a socket
	  to @sockets in make_socket() to close sockets on shutdown even if
	  make_socket() is called after initialize.

	* lib/rinda/ring.rb (Rinda::RingServer#make_socket): ditto.

Thu Apr 25 23:39:42 2013  Hiroshi Shirosaki  <h.shirosaki@gmail.com>

	* test/rinda/test_rinda.rb (TupleSpaceProxyTest#test_take_bug_8215):
	  use KILL on Windows since TERM doen't work and ruby process remains
	  after test-all on Windows.

Thu Apr 25 23:16:28 2013  Tanaka Akira  <akr@fsij.org>

	* ext/curses/extconf.rb: Implement
	  --with-curses-version={function,variable} configure option for
	  cross-compiling.

Thu Apr 25 18:15:46 2013  Tanaka Akira  <akr@fsij.org>

	* ext/socket/extconf.rb: Don't use WIDE getaddrinfo by default.

Thu Apr 25 17:56:39 2013  Tanaka Akira  <akr@fsij.org>

	* ext/socket/extconf.rb: Remove obsolete options: ---with-ipv6-lib and
	  --with-ipv6-libdir.

Thu Apr 25 17:43:49 2013  Tanaka Akira  <akr@fsij.org>

	* ext/socket/extconf.rb: Implement
	  --{enable,disable}-close-fds-by-recvmsg-with-peek configure option
	  for cross-compiling.
	  Make --{enable,disable}-wide-getaddrinfo configure option